feat: adicionar tabela de Diretor
feat: implementar documentação
