# aulas/aula 06/controller/filme/controller_filme.js
@@ -12,6 +12,9 @@ const configMessages = require('../modulo/configMessages.js')
 //Import do arquivo do DAO para manipular os dados de filme no Banco de Dados
 const filmeDAO = require('../../model/DAO/filme/filme.js')
 
+//Import das Controlles
+const controllerClassificacao = require('../classificacao/controller_classificacao.js')
+
 //Função para validar os dados de cadastro do filme
 const validarDados = async function (filme) {
 
@@ -46,6 +49,10 @@ const validarDados = async function (filme) {
         customMessage.ERROR_BAD_REQUEST.field = '[AVALIAÇÃO] INVÁLIDA'
         return customMessage.ERROR_BAD_REQUEST
 
+    // Validação para a FK da classificação (Chave Estrangeira)
+    } else if (filme.id_classificacao == undefined || filme.id_classificacao == '' || filme.id_classificacao == null || isNaN(filme.id_classificacao) || filme.id_classificacao <= 0) {
+        customMessage.ERROR_BAD_REQUEST.field = '[ID_CLASSIFICAÇÃO] INVÁLIDA'
+        return customMessage.ERROR_BAD_REQUEST
     } else {
         return false
     }
@@ -173,6 +180,22 @@ const listarFilme = async function () {
         if (result) {
             //Validação para verificar se o conteúdo do Array tem dados de retorno ou se está vazio
             if (result.length > 0) {
+                
+                //Manipulação dos dados da Classificação
+                //Percorre o array de filmes
+                for (filme of result) {
+                    //Busca na controller da classificação o ID referente a FK da classificação
+                    let resultClassificacao = await controllerClassificacao.buscarClassificacao(filme.id_classificacao)
+
+                    //Se encontrar o ID
+                    if (resultClassificacao.status) {
+                        //Adicionar um atributo classificação no JSON do filme e colocar o resultado com os dados da classificação
+                        filme.classificacao = resultClassificacao.response.classificacao
+                        //Apaga o id_classificação do JSON de filme
+                        delete filme.id_classificacao
+                    }
+                }
+
                 customMessage.DEFAULT_MESSAGE.status = customMessage.SUCCESS_RESPONSE.status
                 customMessage.DEFAULT_MESSAGE.status_code = customMessage.SUCCESS_RESPONSE.status_code
                 customMessage.DEFAULT_MESSAGE.response.count = result.length
@@ -209,6 +232,22 @@ const buscarFilme = async function (id) {
             if (result) {
                 //Validação para verificar se o DAO tem algum dado no Array
                 if (result.length > 0) {
+
+                //Manipulação dos dados da Classificação
+                //Percorre o array de filmes
+                for (filme of result) {
+                    //Busca na controller da classificação o ID referente a FK da classificação
+                    let resultClassificacao = await controllerClassificacao.buscarClassificacao(filme.id_classificacao)
+
+                    //Se encontrar o ID
+                    if (resultClassificacao.status) {
+                        //Adicionar um atributo classificação no JSON do filme e colocar o resultado com os dados da classificação
+                        filme.classificacao = resultClassificacao.response.classificacao
+                        //Apaga o id_classificação do JSON de filme
+                        delete filme.id_classificacao
+                    }
+                }
+
                     customMessage.DEFAULT_MESSAGE.status = customMessage.SUCCESS_RESPONSE.status
                     customMessage.DEFAULT_MESSAGE.status_code = customMessage.SUCCESS_RESPONSE.status_code
                     customMessage.DEFAULT_MESSAGE.response.filme = result
